# libobsh

./: .gitignore  CREDITS.md  LICENSE  README.md  lob-decode.1  lob-encode.1  lob-run.1  pyproject.toml  test.decoded
libobsh/: lob.py  lob_decode.py  lob_encode.py  lob_run.py
libobsh.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
