[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "libobsh"
version = "0.1.0"
description = "Library of Babel tools: encode any file to a deterministic coordinate, decode, and run scripts"
authors = [{name = "Your Name", email = "you@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
lob-encode = "lob_encode:main"
lob-decode = "lob_decode:main"
lob-run = "lob_run:main"

[tool.setuptools.packages.find]
include = ["lib"]
