[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "libobsh"
version = "0.1.3"
description = "Library of Babel tools: encode any file to a deterministic coordinate, decode, and run scripts"
authors = [{name = "McTRASH692", email = "your-email@example.com"}]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.scripts]
lob-encode = "libobsh.lob_encode:main"
lob-decode = "libobsh.lob_decode:main"
lob-run = "libobsh.lob_run:main"

[tool.setuptools.packages.find]
include = ["libobsh"]
